<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ResourcesTest_GB</string>
    <string name="language">English</string>
    <string name="density" translatable="false" tools:ignore="MissingTranslation">DPI</string>
    <string name="orientation">Portland</string>
    <string name="night_mode">Not night</string>
    <string name="screen_format">Not long</string>
    <string name="version" tools:ignore="MissingTranslation">Any</string>
    <string name="descriptionLanguage">Language</string>
    <string name="descriptionDensity">Density</string>
    <string name="descriptionOrientation">Orientation</string>
    <string name="descriptionNight_mode">Night mode</string>
    <string name="descriptionScreen_format">Screen format</string>
    <string name="descriptionVersion">Version</string>
    <string name="version_pic">Your Version\n(click to show other version)</string>
    <string-array name="version_name">
        <item>About Android</item>
        <item>Android 1.5 Cupcake</item>
        <item>Android 1.6 Donut</item>
        <item>Android 2.0 Eclair</item>
        <item>Android 2.2 Froyo</item>
        <item>Android 2.3 GingerGread</item>
        <item>Android 3.0 Honeycomb</item>
        <item>Android 4.0 Ice Cream Sandwich</item>
        <item>Android 4.1 Jelly Beam</item>
        <item>Android 4.4 KitKat</item>
        <item>Android 5.0 Lollipop</item>
        <item>Android 6.0 Marshmallow</item>
        <item>Android 7.0 Nougat</item>
        <item>Android 8.0 Oreo</item>
        <item>Android 9.0 Pie</item>
        <item>Android 10.0 </item>
        <item>Android 11.0 </item>
    </string-array>
    <string name="endl_rus">Endl/Rus</string>
    <string name="descriptions">Descriptions!</string>
    <string-array name="version_description_en">
        <item>
            Android OS was launched in November 2007 and the first commercial smartphone based on
            the same came a year later by HTC the HTC Dream, which was released in select markets.
            The OS that started with just a single device in 2007 now powers billions of smartphones,
            tablets, and other smart devices and is currently the most used mobile operating system
            across the world. The very first version of Android was called as Android 1.0, which was
            also known as Android Alpha, then came its successor Android 1.1 or Android Beta.
            From then on up until the Android 10 release, every Android version was launched in a
            dessert name as the Android versions were a bit confusing. Here is the complete detail
            on every Android version launched to date.
        </item>














        <item>
            Android 1.5 was released on April 27, 2009, and it is the first Android version to
            officially get a dessert nickname. Android 1.5 was known as Android Cupcake and it was
            developed by Google with API 3.
        </item>

        <item>
            Android 1.6 Donut was released on September 15, 2009, just a few months after the launch
            of the Android 1.5 Cupcake and it came with the API 4. This was also called the fourth
            version of the Android and it introduced some distinctive features such as support for
            CDMA technology, support for different screen sizes, and a battery usage indicator that
            was also first introduced on this version.
        </item>

        <item>
            Android 2.0 Eclairs came with an API level of 5 to 7 and it was released on October 26 2009,
            again, a fourth major Android update to get released in 2009. The fifth version of Android
            aka the Android 2.0 Eclair offered features like an improved UI with a Google search bar
            on the top and it also supported HTML 5.
        </item>

        <item>
            Android 2.2 Froyo was made available to the public on May 20, 2010, and it came with API 8.
            This version was unveiled during Google I/O 2010 conference and it offered several
            optimizations when compared to Android 2.0 Eclairs.
        </item>

        <item>
            Android 2.3 Gingerbread was also launched in 2010, to be exact on December 6, 2010,
            with API 9 to 10. This version introduced features like NFC support and VoIP calls.
            The Nexus S smartphone from Samsung was the first device to launch with this OS,
            which was also the first Nexus smartphone from Google that represented stock Android OS.
        </item>

        <item>
            Android 3.0 Honeycomb was released on February 22, 2011, and it came with API 11 to 13.
            This version of Android was designed for large screen devices like tablets and the
            Motorola Xoom was the first product to ship with Android 3.0 Honeycomb.
        </item>

        <item>
            Android 4.0 Ice Cream Sandwich was released on October 18, 2011, and it came with an API
            version from 14 to 15. This version was designed to offer a unified experience for both
            smartphones and tablets. It was also the first Android version to support Face Unlock on
            select devices.
        </item>

        <item>
            Android 4.1 Jelly Bean got official on July 9, 2012, and it came with an API of 16 to 18.
            Android Jelly Bean is also officially the 10th iteration of Android and it was developed
            to offer performance improvements along with smooth user experience when compared to
            Android 4.0.
        </item>

        <item>
            Android 4.4 KitKat got official on October 31, 2013, and it came with an API of 19 to 20.
            This version of Android was developed to offer an improved user experience on devices
            with limited hardware capabilities.
        </item>

        <item>
            Android 5.0 Lillipop offered a major design overhaul when compared to Android 4.4 KitKat
            and it was released on November 12, 2014, and it came with an API version of 20 to 22.
            This version of Android offered a redesigned UI and it also replaced Dalvik with ART or
            Android Runtime to improve application performance and battery optimization.
        </item>

        <item>
            Android 6.0 Marshmallow was released on October 5, 2015, based on API 23. It offered a
            new permission architecture to improve user-privacy and it also natively supported USB
            Type-C port and a physical fingerprint sensor.
        </item>

        <item>
            Android 7.0 Nougat with an API version of 24 to 25 was released on August 22, 2016.
            Nougat offered support for Vulkan API for better graphics rendering along with a new app
            notification format.
        </item>

        <item>
            Android 8.0 Oreo got launched on August 21, 2017, and this version was based on API
            26 to 27. Oreo was the first Android version to support Bluetooth 5.0 and wide color gamut.
        </item>

        <item>
            Android 9 Pie got official on August 6, 2018, with API 28 and it offered a refreshed
            material design with a new style of navigation buttons. Till today, a lot of smartphones
            are still based on Android 9 Pie.
        </item>

        <item>
            Android 10 was released on September 3, 2019, based on API 29. This version was known as
            Android Q at the time of development and this is the first modern Android OS that does not
            have a dessert code name. It offered a complete full-screen user-interface with a redesigned
            navigation system, which is a bit similar to the modern iPhones.
        </item>

        <item>
            Android 11 was released on September 8, 2020, and this version was based on API 30.
            It comes with features like conversation notifications and this is also the first official
            Android version to offer a built-in screen recorder.
        </item>
    </string-array>
</resources>